--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,5 +1,4 @@
-#JDBC properties entry for ORACLE server
-driver = oracle.jdbc.OracleDriver
+driver=oracle.jdbc.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:xe
-#username=SYSTEM
-#password=root
+username=SYSTEM
+password=vinay
